--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "node scripts/update-plugins.js",
     "translations": "node scripts/download-translations.js"
   },
   "repository": {
