--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node scripts/update-plugins.js",
+    "start": "npm run-script translations && npm run-script update",
+    "update": "node scripts/update-plugins.js",
     "translations": "node scripts/download-translations.js"
   },
   "repository": {
