--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "npm run-script translations && npm run-script update",
-    "update": "node scripts/update-plugins.js",
-    "translations": "node scripts/download-translations.js"
+    "start": "node --harmony-async-await scripts/start.js",
+    "update": "node --harmony-async-await scripts/update-plugins.js",
+    "translations": "node --harmony-async-await scripts/download-translations.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/keeweb/keeweb-plugins/issues"
   },
-  "homepage": "https://github.com/keeweb/keeweb-plugins#readme"
+  "homepage": "https://github.com/keeweb/keeweb-plugins#readme",
+  "devDependencies": {
+    "keychain": "^1.3.0",
+    "pkcs15-smartcard-sign": "^1.0.0"
+  }
 }
