--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-standard": "^3.0.1"
+  },
+  "optionalDependencies": {
     "keytar": "^4.0.3",
     "pkcs15-smartcard-sign": "^1.0.0"
   }
