--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
         "strict": ["error", "never"],
         "no-mixed-operators": "off",
         "prefer-promise-reject-errors": "off",
-        "standard/no-callback-literal": "off"
+        "standard/no-callback-literal": "off",
+        "object-curly-spacing": "off"
     },
     "parserOptions": {
         "sourceType": "module",
