--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
   },
   "homepage": "https://github.com/keeweb/keeweb-plugins#readme",
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.1"
   },
   "optionalDependencies": {
-    "keytar": "^4.13.0",
-    "pkcs15-smartcard-sign": "^1.0.0"
+    "keytar": "^5.4.0"
+  },
+  "dependencies": {
+    "pkcs11-smartcard-sign": "^1.0.0"
   }
 }
