--- a/tmpl/manifest.json
+++ b/tmpl/manifest.json
@@ -8,7 +8,7 @@
     "email": "antelle.net@gmail.com",
     "url": "https://keeweb.info"
   },
-  "licence": "MIT",
+  "license": "MIT",
   "url": "https://plugins.keeweb.info/translations?lang={lang}",
   "resources": {
     "loc": "{signature}"
