--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,7 +1,7 @@
-name: Deploy
+name: CI Checks
 on: [push, pull_request]
 jobs:
-  publish:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
