--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "lint": "eslint scripts docs/plugins",
+    "eslint": "eslint scripts docs/plugins",
     "update": "node scripts/update-plugins.js",
     "translations": "node scripts/download-translations.js",
     "watch": "run() { node ../keeweb/plugins/keeweb-plugin/keeweb-plugin.js watch docs/plugins/$1/ --bump-version --signer-module=../../../keeweb-plugins/scripts/sign; }; run",
